feito editar e atualizar cadastro no controller

--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -32,6 +32,8 @@
     </div>
     <br>
     <div>
-        <%= form.submit %>
+        <%= link_to "Voltar", :back, class: "btn btn-secondary" %>
+        <%= form.submit "Confirmar" %>
+
     </div>
 <% end %>
