--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -11,7 +11,7 @@
 <div>
     <ul>
         <li>
-            <%= link_to "Edit", edit_patient_path(@patient) %>
+            <%= link_to "Editar", edit_patient_path(@patient) %>
         </li>
     </ul>
 </div>
