--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,7 @@
 <ul>
   <li><%= link_to "Cadastrar Paciente", new_patient_path %></li>
   <li><%= link_to "Listar Todos Pacientes", patients_path %></li>
+  <li><%= link_to "Cadastrar Médico", new_doctor_path %></li>
 </ul>
 
 
