--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -2,7 +2,7 @@
 <%= link_to "Home", root_path %>
 <p>Nome: <%= @patient.fullname %></p>
 
-<p>Data de nascimento: <%= @patient.date_of_birth %></p>
+<p>Data de nascimento: <%= @patient.birthdate %></p>
 
 <p>CPF: <%= @patient.cpf %></p>
 
