--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -9,5 +9,5 @@
   <% end %>
 </ul>
 
-<%= link_to "Voltar", :back, class: "btn btn-secondary" %>
+<%= link_to "Voltar", root_path, class: "btn btn-secondary" %>
 
