--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,3 +1,4 @@
 <h1>Cadastrar Paciente</h1>
 
 <%= render partial: "form", locals: { patient: @patient } %>
+<%= link_to "Voltar", root_path, class: "btn btn-secondary" %>
