--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -13,6 +13,9 @@
         <li>
             <%= link_to "Editar", edit_patient_path(@patient) %>
         </li>
+        <li>
+            <%= link_to 'Agendar Consulta', new_patient_consultation_path(@patient) %>
+        </li>
     </ul>
 </div>
 
