--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -1,3 +1,4 @@
 <h1>Cadastrar Médico</h1>
 
 <%= render partial: "form", locals: { doctor: @doctor } %>
+<%= link_to "Voltar", root_path, class: "btn btn-secondary" %>
