--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -16,6 +16,9 @@
         <li>
             <%= link_to 'Agendar Consulta', new_patient_consultation_path(@patient) %>
         </li>
+        <li>
+            <%= link_to "Listar Consultas", patient_consultation_path(@patient) %>
+        </li>
     </ul>
 </div>
 
