arrumando rotas do botao voltar

--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -32,4 +32,4 @@
 
 
 
-<%= link_to "Voltar", root_path, class: "btn btn-secondary" %>
+<%= link_to "Voltar", patient_path(@patient), class: "btn btn-secondary" %>
