--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -21,8 +21,7 @@
         </li>
     </ul>
 </div>
-
 <div>
-    <%= link_to "Voltar", :back, class: "btn btn-secondary" %>
+    <%= link_to "Voltar", patients_path, class: "btn btn-secondary" %>
 </div>
 
