--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -19,5 +19,5 @@
 </div>
 
 <div>
-    <%= link_to "Voltar", :back, class: "btn btn-secondary" %>
+    <%= link_to "Voltar", doctors_path, class: "btn btn-secondary" %>
 </div>
