Listagem das consultas do medico finalizadas

--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -15,6 +15,9 @@
         <li>
             <%= link_to "Editar", edit_doctor_path(@doctor) %>
         </li>
+        <li>
+            <%= link_to "Consultas", consultations_doctor_path(@doctor) %>
+        </li>
     </ul>
 </div>
 
