--- a/app/views/consultations/new.html.erb
+++ b/app/views/consultations/new.html.erb
@@ -1,3 +1,84 @@
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
+
+  h1 {
+    color: #333;
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  form {
+    max-width: 500px;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="date"] {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 15px;
+  }
+
+  .error-message {
+    color: #ff0000;
+    margin-bottom: 10px;
+  }
+
+  input[type="submit"] {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  input[type="submit"]:hover {
+    background-color: #555;
+  }
+  .btn {
+    padding: 10px 20px;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .btn-custom {
+
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: blue;
+    color: white; /* Defina a cor do texto como branco */
+    text-decoration: none;
+    border-radius: 4px;
+  }
+  .btn-custom:hover {
+    background-color: darkblue;
+  }
+</style>
+
+
 <%= form_with model: [@patient, @consultation], url: patient_consultations_path(@patient) do |form| %>
   <div>
     <%= form.label :doctor_id %><br>
@@ -14,8 +95,6 @@
     <div><%= message %></div>
   <% end %>
 </div>
-
-
   <br>
   <div>
     <%= form.label :time %><br>
@@ -29,3 +108,4 @@
     <%= form.submit 'Salvar Consulta' %>
   </div>
 <% end %>
+<a class="btn-custom" href="<%= patient_path(@patient) %>">Voltar</a>
