--- a/app/views/doctors/edit.html.erb
+++ b/app/views/doctors/edit.html.erb
@@ -1,4 +1,30 @@
+
+<style>
+    .btn {
+        padding: 10px 20px;
+        font-size: 14px;
+        font-weight: bold;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    .btn-custom {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: blue;
+        color: white; /* Defina a cor do texto como branco */
+        text-decoration: none;
+        border-radius: 4px;
+    }
+    .btn-custom:hover {
+        background-color: darkblue;
+    }
+</style>
+
 <h1>Editar cadastro do médico</h1>
 
 <%= render "form", doctor: @doctor %>
-<%= link_to "Voltar", doctor_path(@doctor) %>
+<%= link_to "Voltar", doctor_path(@doctor), class: "btn-custom" %>
