--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,7 +1,65 @@
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
 
+  h1 {
+    color: #333;
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  .doctor-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .doctor-list li {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+
+  .doctor-list li a {
+    color: #333;
+    text-decoration: none;
+  }
+
+  .doctor-list li a:hover {
+    text-decoration: underline;
+  }
+
+  .btn {
+    padding: 10px 20px;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .btn-custom {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: blue;
+    color: white; /* Defina a cor do texto como branco */
+    text-decoration: none;
+    border-radius: 4px;
+  }
+  .btn-custom:hover {
+    background-color: darkblue;
+  }
+</style>
 <h1>Listar Médicos</h1>
 
-<ul>
+<ul class="doctor-list">
     <% @doctors.each do |doctor| %>
         <li>
             <a href="<%= doctor_path(doctor) %>">
@@ -10,4 +68,4 @@
         </li>
     <% end %>
 </ul>
-<%= link_to "Voltar", root_path, class: "btn btn-secondary" %>
+<%= link_to "Voltar", root_path, class: "btn-custom" %>
